got basic code running in pyro

--- a/notebooks/contact_rate_bayesian_inference.ipynb
+++ b/notebooks/contact_rate_bayesian_inference.ipynb
@@ -14,27 +14,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "# import numpyro\n",
+    "# import numpyro.distributions as dist\n",
+    "# from numpyro.distributions import DirichletMultinomial\n",
+    "# from numpyro.infer import MCMC, NUTS, HMC\n",
+    "# from jax import random\n",
+    "\n",
+    "import pyro\n",
+    "import pyro.distributions as dist\n",
+    "from pyro.infer import MCMC, NUTS, SVI, Trace_ELBO, Predictive\n",
+    "\n",
+    "import torch\n",
+    "import pandas as pd\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def observe_contact_distribution(N: int, lamda: float, beta: float, y: np.array =None):\n",
+    "\n",
+    "    r\"\"\" \n",
+    "    Args:\n",
+    "        N: population size\n",
+    "        lamda: prevalence\n",
+    "        beta: probability of infection given contact with positive\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # p = distribution of the number of contacts of a person; use Dirichlet prior\n",
+    "    p = pyro.sample(\n",
+    "        'p', \n",
+    "        dist.Dirichlet(concentration=torch.tensor([0.1, 0.1, 0.1])), \n",
+    "        # rng_key=random.PRNGKey(1)\n",
+    "    )\n",
+    "\n",
+    "    # loop over k, the number of contacts, and sample the number of infections with k contacts\n",
+    "    for k in range(3):\n",
+    "        p_inf = 1-(1-lamda*beta)**k \n",
+    "        # print(\"k: \", k, \"p_inf: \", p_inf, \"total_count: \", int(N*p[k]))\n",
+    "        pyro.sample(f'infected_w_num_contacts_{k}', dist.Binomial(total_count = int(N * p[k]), probs = torch.tensor([p_inf])))\n",
+    "\n",
+    "\n",
+    "    # NOTE: logic that samples each person as a Bernoulli\n",
+    "    # is technically correct but makes it a lot harder to obtain the observed contact distribution \n",
+    "    # and the naming of RVs is not right, has duplicate\n",
+    "\n",
+    "    # with numpyro.plate('N', N):\n",
+    "    #     # for each individual, sample their number of contacts k from the Dirichlet distribution\n",
+    "    #     # then sample a Bernoulli with probability 1-(1-lambda*beta)^k\n",
+    "\n",
+    "    #     num_contacts = numpyro.sample('num_contacts', dist.Multinomial(probs=p))\n",
+    "    #     p_inf = 1-(1-lamda*beta)**num_contacts\n",
+    "    #     numpyro.sample('infected', dist.Bernoulli(1, p_inf))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N=20\n",
+    "lamda = 0.1\n",
+    "beta=0.1\n",
+    "y = torch.tensor([20,5,5])\n",
+    "\n",
+    "\n",
+    "nuts_kernel = NUTS(observe_contact_distribution) # also called \"sampler\"\n",
+    "mcmc = MCMC(nuts_kernel, warmup_steps=500, num_samples=10000)\n",
+    "# rng_key = random.PRNGKey(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/yz685/anaconda3/envs/param_uncertainty/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "Warmup:   1%|          | 97/10500 [00:04, 33.89it/s, step size=5.17e+00, acc. prob=0.781]"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import numpyro\n",
-    "import numpyro.distributions as dist\n",
-    "from numpyro.distributions import DirichletMultinomial\n",
-    "\n",
-    "from numpyro.infer import MCMC, NUTS\n",
-    "\n",
-    "from jax import random\n"
+    "start_time = time.time()\n",
+    "mcmc.run(N, lamda, beta, y)\n",
+    "print(f\"Took {time.time()-start_time} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hmc_samples = {k: v.detach().cpu().numpy() for k, v in mcmc.get_samples().items()}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Utility function to print latent sites' quantile information.\n",
+    "def summary(samples):\n",
+    "    site_stats = {}\n",
+    "    for site_name, values in samples.items():\n",
+    "        marginal_site = pd.DataFrame(values)\n",
+    "        describe = marginal_site.describe(percentiles=[.05, 0.25, 0.5, 0.75, 0.95]).transpose()\n",
+    "        site_stats[site_name] = describe[[\"mean\", \"std\", \"5%\", \"25%\", \"50%\", \"75%\", \"95%\"]]\n",
+    "    return site_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Site: p\n",
+      "       mean       std            5%       25%       50%       75%       95%\n",
+      "0  0.349389  0.418804  3.849434e-11  0.000049  0.064225  0.869990  0.999715\n",
+      "1  0.277617  0.381926  1.504859e-14  0.000009  0.018681  0.595093  0.997639\n",
+      "2  0.372994  0.423901  1.492209e-07  0.000464  0.098867  0.898001  0.999970 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for site, values in summary(hmc_samples).items():\n",
+    "    print(\"Site: {}\".format(site))\n",
+    "    print(values, \"\\n\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Below is using numpyro"
    ]
   },
   {
@@ -43,6 +176,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# numpyro version\n",
+    "\n",
     "def observe_contact_distribution(N: int, lamda: float, beta: float, y: np.array =None):\n",
     "\n",
     "    r\"\"\" \n",
@@ -76,12 +211,13 @@
     "    #     num_contacts = numpyro.sample('num_contacts', dist.Multinomial(probs=p))\n",
     "    #     p_inf = 1-(1-lamda*beta)**num_contacts\n",
     "    #     numpyro.sample('infected', dist.Bernoulli(1, p_inf))\n",
-    "        "
+    "        \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,14 +227,14 @@
     "y = np.array([10,5,5])\n",
     "\n",
     "\n",
-    "nuts_kernel = NUTS(observe_contact_distribution) # also called \"sampler\"\n",
+    "nuts_kernel = HMC(observe_contact_distribution) # also called \"sampler\"\n",
     "mcmc = MCMC(nuts_kernel, num_warmup=500, num_samples=1000)\n",
     "rng_key = random.PRNGKey(0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
