minor update + more mcmc samples

--- a/notebooks/contact_rate_bayesian_inference.ipynb
+++ b/notebooks/contact_rate_bayesian_inference.ipynb
@@ -72,8 +72,7 @@
     "        obs = pyro.sample(\n",
     "            'obs', \n",
     "            dist.Binomial(\n",
-    "                total_count=binomial_counts, # this throws an error\n",
-    "                # total_count=20, # this runs\n",
+    "                total_count=binomial_counts, \n",
     "                probs=p_inf),\n",
     "            obs=data \n",
     "        )\n",
@@ -82,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,29 +89,28 @@
     "lamda = 0.1 # prevalence\n",
     "beta=0.1 # probability of infection given contact with positive person\n",
     "y = torch.tensor([5,5,10]) # observed contact distribution, i.e., 5 have 0, 5 have 1, 10 have 2 contacts\n",
-    "# y = torch.tensor([5])\n",
     "\n",
     "nuts_kernel = NUTS(observe_contact_distribution) # also called \"sampler\"\n",
-    "mcmc = MCMC(nuts_kernel, warmup_steps=5, num_samples=10)\n"
+    "mcmc = MCMC(nuts_kernel, warmup_steps=100, num_samples=500)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sample: 100%|██████████| 15/15 [00:01, 12.16it/s, step size=1.53e-01, acc. prob=0.306]"
+      "Sample: 100%|██████████| 600/600 [39:47,  3.98s/it, step size=8.08e-04, acc. prob=0.862]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Took 1.2381768226623535 seconds\n"
+      "Took 2387.341058731079 seconds\n"
      ]
     },
     {
@@ -131,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -165,9 +163,9 @@
      "text": [
       "Site: p\n",
       "       mean       std        5%       25%       50%       75%       95%\n",
-      "0  0.290979  0.101167  0.147689  0.206078  0.306563  0.381423  0.402956\n",
-      "1  0.158898  0.084343  0.080959  0.088198  0.148454  0.197475  0.286960\n",
-      "2  0.550123  0.086977  0.440032  0.507497  0.519916  0.635689  0.654871 \n",
+      "0  0.314451  0.089374  0.183863  0.251462  0.307641  0.376311  0.466320\n",
+      "1  0.245077  0.097898  0.122148  0.175583  0.218205  0.305509  0.425191\n",
+      "2  0.440472  0.111015  0.254480  0.370630  0.440094  0.504709  0.638854 \n",
       "\n"
      ]
     }
